@@ -12,6 +12,7 @@ import src.main.scala.licenses.{
   DistributionDescription,
   SBTDistributionComponent
 }
+
 import scala.sys.process._
 
 // This import is unnecessary, but bit adds a proper code completion features
@@ -29,9 +30,9 @@ import java.nio.file.Paths
 
 val scalacVersion = "2.13.15"
 // source version of the Java language
-val javaVersion = "21"
+val javaVersion = "24"
 // version of the GraalVM JDK
-val graalVersion = "21.0.2"
+val graalVersion = "24.0.1"
 // Version used for the Graal/Truffle related Maven packages
 // Keep in sync with GraalVM.version. Do not change the name of this variable,
 // it is used by the Rust build script via regex matching.
@@ -223,6 +224,16 @@ ThisBuild / javacOptions ++= Seq(
   "-g",               // Include debugging information
   "-Xlint:unchecked", // Enable additional warnings
   "-proc:full"        // Annotation processing is enabled
+)
+
+ThisBuild / javaOptions ++= Seq(
+  // Needed for migration from JDK 21 to JDK 24
+  // See https://github.com/oracle/graal/blob/master/sdk/CHANGELOG.md#version-2420
+  "--enable-native-access=org.graalvm.truffle",
+  // Truffle calls terminally deprecated methods from sun.misc.Unsafe in JDK24.
+  // This removes the warnings at runtime.
+  // TODO: Remove this until JDK 26
+  "--sun-misc-unsafe-memory-access=allow"
 )
 
 ThisBuild / scalacOptions ++= Seq(
@@ -1633,6 +1644,7 @@ lazy val `task-progress-notifications` = project
   .enablePlugins(JPMSPlugin)
   .configs(Test)
   .settings(
+    frgaalJavaCompilerSetting,
     scalaModuleDependencySetting,
     version := "0.1",
     compileOrder := CompileOrder.ScalaThenJava,
@@ -3074,7 +3086,7 @@ lazy val `runtime-integration-tests` =
         // Add necessary exports for IR module dumping to IGV
         // Which is used in the test utils
         val irDumperExports = Map(
-          "jdk.internal.vm.compiler/org.graalvm.graphio" -> Seq(
+          "jdk.graal.compiler/jdk.graal.compiler.graphio" -> Seq(
             (`runtime-compiler-dump-igv` / javaModuleName).value
           )
         )
@@ -3487,7 +3499,7 @@ lazy val `runtime-compiler-dump` =
     .dependsOn(`runtime-parser`)
 
 /** This is a standalone project that is not compiled with Frgaal on purpose.
-  * It depends on jdk.internal.vm.compiler module, which cannot be included in Frgaal.
+  * It depends on jdk.graal.compiler module, which cannot be included in Frgaal.
   * It includes a service provider for service definition in `runtime-compiler-dump`.
   */
 lazy val `runtime-compiler-dump-igv` =
@@ -3508,7 +3520,7 @@ lazy val `runtime-compiler-dump-igv` =
       ),
       Compile / addExports ++= {
         Map(
-          "jdk.internal.vm.compiler/org.graalvm.graphio" -> Seq(
+          "jdk.graal.compiler/jdk.graal.compiler.graphio" -> Seq(
             javaModuleName.value
           )
         )
@@ -3751,7 +3763,7 @@ lazy val `engine-runner` = project
     Compile / run / mainClass := Some("org.enso.runner.Main"),
     commands += WithDebugCommand.withDebug,
     inConfig(Compile)(truffleRunOptionsSettings),
-    libraryDependencies ++= GraalVM.modules ++ jline ++ Seq(
+    libraryDependencies ++= GraalVM.modules ++ GraalVM.toolsPkgs ++ jline ++ Seq(
       "org.graalvm.polyglot"    % "polyglot"                % graalMavenPackagesVersion,
       "org.graalvm.sdk"         % "polyglot-tck"            % graalMavenPackagesVersion % Provided,
       "commons-cli"             % "commons-cli"             % commonsCliVersion,
@@ -3837,34 +3849,55 @@ lazy val `engine-runner` = project
           langServer ++
           epbLang
       ).distinct
-      val stdLibsJars =
-        `base-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `image-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `table-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `database-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `google-api-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-aws-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
-        `std-microsoft-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-snowflake-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath()) ++
-        `std-tableau-polyglot-root`
-          .listFiles("*.jar")
-          .map(_.getAbsolutePath())
+      def stdLibsJars = {
+        val log = streams.value.log
+        val base =
+          `base-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath())
+        if (GraalVM.EnsoLauncher.fast) {
+          log.info(
+            s"Skipping support for non-Standard.Base libraries in the image build as ${GraalVM.EnsoLauncher.VAR_NAME} env variable is ${GraalVM.EnsoLauncher.toString}"
+          )
+          base
+        } else {
+          base ++
+          `image-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `table-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `database-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `google-api-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-aws-polyglot-root`.listFiles("*.jar").map(_.getAbsolutePath()) ++
+          `std-microsoft-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-snowflake-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath()) ++
+          `std-tableau-polyglot-root`
+            .listFiles("*.jar")
+            .map(_.getAbsolutePath())
+        }
+      }
       core ++ stdLibsJars ++ extraNITestLibs.value
     },
     extraNITestLibs := Def.taskDyn {
       if (GraalVM.EnsoLauncher.test) Def.task {
-        Seq(
+        val baseHelpers =
           (`enso-test-java-helpers` / Compile / packageBin).value
-            .getAbsolutePath(),
+            .getAbsolutePath()
+        val snowHelpers =
           (`snowflake-test-java-helpers` / Compile / packageBin).value
             .getAbsolutePath()
-        )
+        if (GraalVM.EnsoLauncher.fast) {
+          Seq(baseHelpers)
+        } else {
+          Seq(
+            baseHelpers,
+            snowHelpers
+          )
+        }
       }
       else {
         Def.task {
@@ -3959,23 +3992,30 @@ lazy val `engine-runner` = project
               "-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.NoOpLog",
               "-H:+AddAllCharsets",
               "-H:+IncludeAllLocales",
+              "-H:+RunReachabilityHandlersConcurrently",
               // Workaround a problem with build-/runtime-initialization conflict
               // by disabling this service provider
               "-H:ServiceLoaderFeatureExcludeServiceProviders=net.snowflake.client.core.FileTypeDetector",
-              // useful perf & debug switches:
-              // "-g",
-              // "-H:+SourceLevelDebug",
-              // "-H:-DeleteLocalSymbols",
-              // you may need to set smallJdk := None to use following flags:
-              // "--trace-class-initialization=org.enso.syntax2.Parser",
-              // "--diagnostics-mode",
-              // "--verbose",
-              "-Dnic=nic",
               "-Dorg.enso.feature.native.lib.output=" + (engineDistributionRoot.value / "bin"),
               "-Dorg.sqlite.lib.exportPath=" + (engineDistributionRoot.value / "bin"),
               // Snowflake uses Apache Arrow (equivalent of #9664 in native-image setup)
               "--add-opens=java.base/java.nio=ALL-UNNAMED"
-            ),
+            ) ++ (if (GraalVM.EnsoLauncher.debug) {
+                    // useful perf & debug switches:
+                    Seq(
+                      "-g",
+                      "-O0",
+                      "-H:+SourceLevelDebug",
+                      "-H:-DeleteLocalSymbols",
+                      // you may need to set smallJdk := None to use following flags:
+                      // "--trace-class-initialization=org.enso.syntax2.Parser",
+                      // "--diagnostics-mode",
+                      // "--verbose",
+                      "-Dnic=nic"
+                    )
+                  } else {
+                    Seq()
+                  }),
             mainClass = Some("org.enso.runner.Main"),
             initializeAtRuntime = Seq(
               "org.apache",
@@ -4823,13 +4863,18 @@ lazy val `std-base` = project
       val result = (Compile / packageBin).value
       val _ensureCoreIsCompiled =
         (`common-polyglot-core-utils` / Compile / packageBin).value
-      val _ = StdBits
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      StdBits
         .copyDependencies(
           `base-polyglot-root`,
           Seq("std-base.jar", "common-polyglot-core-utils.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = None
         )
-        .value
       result
     }
   )
@@ -4886,17 +4931,22 @@ lazy val `generic-jdbc-connection-spec-dependencies` = project
       "org.graalvm.polyglot" % "polyglot" % graalMavenPackagesVersion % "provided",
       "com.h2database"       % "h2"       % h2Version
     ),
-    Compile / packageBin := Def.task {
-      val result = (Compile / packageBin).value
-      val _ = StdBits
+    Compile / packageBin := {
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      StdBits
         .copyDependencies(
           file("test/Generic_JDBC_Tests/polyglot/java/"),
           Seq(),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = None
         )
-        .value
       result
-    }.value
+    }
   )
   .dependsOn(`std-base` % "provided")
   .dependsOn(`std-table` % "provided")
@@ -4985,22 +5035,27 @@ lazy val `std-table` = project
       "org.mockito"              % "mockito-core"            % mockitoJavaVersion        % Test,
       "org.mockito"              % "mockito-junit-jupiter"   % mockitoJavaVersion        % Test
     ),
-    Compile / packageBin := Def.task {
-      val result = (Compile / packageBin).value
+    Compile / packageBin := {
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `table-polyglot-root`,
           Seq("std-table.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          previousRun        = None
         )
-        .value
       result
-    }.value
+    }
   )
   .dependsOn(`std-base` % "provided")
 
-lazy val extractNativeLibs = taskKey[Unit](
-  "Helper task to extract native libraries from OpenCV JAR"
+lazy val extractNativeLibs = taskKey[AnalysisOfExtractedNativeLibs](
+  "Helper task to extract native libraries from a dependency JAR"
 )
 
 lazy val cleanPolyglotRoot = taskKey[Unit](
@@ -5025,33 +5080,49 @@ lazy val `std-image` = project
     // Extract native libraries from opencv.jar, and put them under
     // Standard/Image/polyglot/lib directory. The minimized opencv.jar will
     // be put under Standard/Image/polyglot/java directory.
-    extractNativeLibs := (
+    extractNativeLibs := Def.task {
+      val logger            = streams.value.log
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      import sbt.util.CacheImplicits._
+      val prev = extractNativeLibs.previous
+      StdBits
+        .copyDependencies(
+          `image-polyglot-root`,
+          Seq("std-image.jar", "opencv.jar"),
+          ignoreScalaLibrary = true,
+          ignoreDependency   = Some("org.openpnp" % "opencv" % opencvVersion),
+          libraryUpdates     = (Compile / update).value,
+          logger             = logger,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = prev
+        )
       StdBits
         .extractNativeLibsFromOpenCV(
           `image-polyglot-root`,
           `image-native-libs`,
-          opencvVersion
+          opencvVersion,
+          logger,
+          updateReport = (Compile / update).value,
+          moduleName.value,
+          scalaBinaryVersion.value,
+          cacheStoreFactory,
+          prev
         )
-      )
-      .dependsOn(
-        // Ensure dependencies are first copied.
-        StdBits
-          .copyDependencies(
-            `image-polyglot-root`,
-            Seq("std-image.jar", "opencv.jar"),
-            ignoreScalaLibrary = true,
-            ignoreDependency   = Some("org.openpnp" % "opencv" % opencvVersion)
-          )
-      )
-      .value,
+    }.value,
     cleanPolyglotRoot := Def.task {
+      import sbt.util.CacheImplicits._
+      val forceClean = extractNativeLibs.previous.isEmpty
+      val logger     = streams.value.log
       StdBits.ensureDirExistsAndIsClean(
         `image-polyglot-root`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
       StdBits.ensureDirExistsAndIsClean(
         `image-native-libs`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
     }.value,
     Compile / packageBin := Def
@@ -5080,14 +5151,19 @@ lazy val `std-generic-jdbc` = project
       "org.netbeans.api"     % "org-openide-util-lookup" % netbeansApiVersion        % "provided"
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `generic-jdbc-polyglot-root`,
           Seq("std-generic-jdbc.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5115,33 +5191,50 @@ lazy val `std-google-api` = project
     // Extract native libraries from grpc-netty-shaded-***.jar, and put them under
     // Standard/Google_Api/polyglot/lib directory. The minimized jar will
     // be put under Standard/Google_Api/polyglot/java directory.
-    extractNativeLibs := (
+    extractNativeLibs := Def.task {
+      val logger            = streams.value.log
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      import sbt.util.CacheImplicits._
+      val prev = extractNativeLibs.previous
+      StdBits
+        .copyDependencies(
+          `google-api-polyglot-root`,
+          Seq("std-google-api.jar"),
+          ignoreScalaLibrary = true,
+          ignoreDependencyIncludeTransitive =
+            Some(s"grpc-netty-shaded-${grpcVersion}"),
+          libraryUpdates     = (Compile / update).value,
+          logger             = streams.value.log,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = (Compile / unmanagedJars).value,
+          previousRun        = prev
+        )
       StdBits
         .extractNativeLibsFromGrpc(
           `google-api-polyglot-root`,
           `google-api-native-libs`,
-          grpcVersion
+          grpcVersion,
+          updateReport       = (Compile / update).value,
+          logger             = streams.value.log,
+          moduleName         = moduleName.value,
+          scalaBinaryVersion = scalaBinaryVersion.value,
+          cacheStoreFactory  = cacheStoreFactory,
+          previousRun        = prev
         )
-      )
-      .dependsOn(
-        StdBits
-          .copyDependencies(
-            `google-api-polyglot-root`,
-            Seq("std-google-api.jar"),
-            ignoreScalaLibrary = true,
-            ignoreDependencyIncludeTransitive =
-              Some(s"grpc-netty-shaded-${grpcVersion}")
-          )
-      )
-      .value,
+    }.value,
     cleanPolyglotRoot := Def.task {
+      import sbt.util.CacheImplicits._
+      val forceClean = extractNativeLibs.previous.isEmpty
+      val logger     = streams.value.log
       StdBits.ensureDirExistsAndIsClean(
         `google-api-polyglot-root`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
       StdBits.ensureDirExistsAndIsClean(
         `google-api-native-libs`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
     }.value,
     Compile / packageBin := Def
@@ -5173,14 +5266,19 @@ lazy val `std-database` = project
       "org.postgresql"       % "postgresql"              % postgresVersion
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `database-polyglot-root`,
           Seq("std-database.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5210,14 +5308,19 @@ lazy val `std-aws` = project
       "software.amazon.awssdk" % "ssooidc"                 % awsJavaSdkV2Version
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `std-aws-polyglot-root`,
           Seq("std-aws.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5240,14 +5343,19 @@ lazy val `std-snowflake` = project
       "net.snowflake"    % "snowflake-jdbc-thin"     % snowflakeJDBCVersion exclude ("io.grpc", "grpc-xds")
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `std-snowflake-polyglot-root`,
           Seq("std-snowflake.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5270,14 +5378,19 @@ lazy val `std-microsoft` = project
       "com.microsoft.sqlserver" % "mssql-jdbc"              % mssqlserverJDBCVersion
     ),
     Compile / packageBin := {
-      val result = (Compile / packageBin).value
+      val result            = (Compile / packageBin).value
+      val cacheStoreFactory = streams.value.cacheStoreFactory
       StdBits
         .copyDependencies(
           `std-microsoft-polyglot-root`,
           Seq("std-microsoft.jar"),
-          ignoreScalaLibrary = true
+          ignoreScalaLibrary = true,
+          libraryUpdates     = (Compile / update).value,
+          unmanagedClasspath = (Compile / unmanagedClasspath).value,
+          logger             = streams.value.log,
+          cacheStoreFactory,
+          previousRun = None
         )
-        .value
       result
     }
   )
@@ -5386,34 +5499,60 @@ lazy val `std-tableau` = project
     ),
     // Extract native libraries from tableau's jar, and put them under
     // Standard/Tableau/polyglot/lib directory.
-    extractNativeLibs := (
+    extractNativeLibs := Def.task {
+      val logger            = streams.value.log
+      val cacheStoreFactory = streams.value.cacheStoreFactory
+      import sbt.util.CacheImplicits._
+      val prev               = extractNativeLibs.previous
+      val tableauSuffixInJar = s"tableauhyperapi-${StdBits.plainOsName()}"
+      val tableauNativeLibJar = (Compile / unmanagedJars).value
+        .map(_.data)
+        .filter(f => f.getName.contains(tableauSuffixInJar))
+        .head
+      val libraryUpdates     = (Compile / update).value
+      val unmanagedClasspath = (Compile / unmanagedJars).value
+      StdBits
+        .copyDependencies(
+          `std-tableau-polyglot-root`,
+          Seq("std-tableau.jar"),
+          ignoreScalaLibrary = true,
+          ignoreUnmanagedDependency =
+            Some(!_.getName.endsWith("tableauhyperapi.jar")),
+          libraryUpdates     = libraryUpdates,
+          logger             = logger,
+          cacheStoreFactory  = cacheStoreFactory,
+          unmanagedClasspath = unmanagedClasspath,
+          previousRun        = prev
+        )
+
       StdBits
         .extractNativeLibsFromTableau(
           `std-tableau-polyglot-root`,
           `std-tableau-native-libs`,
           tableauVersion,
-          jnaVersion
+          jnaVersion,
+          updateReport       = libraryUpdates,
+          unmanagedClasspath = unmanagedClasspath,
+          logger             = logger,
+          moduleName         = moduleName.value,
+          scalaBinaryVersion = scalaBinaryVersion.value,
+          cacheStoreFactory  = cacheStoreFactory,
+          previousRun        = prev
         )
-      )
-      .dependsOn(
-        StdBits
-          .copyDependencies(
-            `std-tableau-polyglot-root`,
-            Seq("std-tableau.jar"),
-            ignoreScalaLibrary = true,
-            ignoreUnmanagedDependency =
-              Some(!_.getName.endsWith("tableauhyperapi.jar"))
-          )
-      )
-      .value,
+    }.value,
     cleanPolyglotRoot := Def.task {
+      import sbt.util.CacheImplicits._
+      val forceClean = extractNativeLibs.previous.isEmpty
+      val logger     = streams.value.log
       StdBits.ensureDirExistsAndIsClean(
         `std-tableau-polyglot-root`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
       StdBits.ensureDirExistsAndIsClean(
         `std-tableau-native-libs`.toPath,
-        streams.value.log
+        logger,
+        forceClean
       )
     }.value,
     Compile / packageBin := Def
@@ -5561,7 +5700,9 @@ ThisBuild / NativeImage.additionalOpts := {
     Seq()
   } else {
     var opts = if (GraalVM.EnsoLauncher.release) {
-      Seq("-O3")
+      // Picking `-Os` option instead of `-O3` in production on purpose.
+      // See https://github.com/enso-org/enso/pull/12855#issuecomment-2812552448
+      Seq("-Os")
     } else {
       Seq("-Ob")
     }
@@ -5604,6 +5745,32 @@ runEngineDistribution := {
     args,
     streams.value.log
   )
+}
+
+lazy val lintEnso =
+  inputKey[Unit](
+    "Run Enso linter on one or many projects. If no arguments are specified, all projects are linted. Otherwise, the argument should be the full path or just the name of the project to lint."
+  )
+lintEnso := {
+  buildEngineDistributionNoIndex.value
+  val fileTree = fileTreeView.value
+
+  val args: Seq[String] = spaceDelimited("<arg>").parsed
+  val whatToLint = args match {
+    case Seq()     => EnsoLint.LintTarget.All
+    case Seq(name) => EnsoLint.LintTarget.FindByName(name)
+    case _ =>
+      throw new IllegalArgumentException(
+        "At most one argument to lintEnso expected."
+      )
+  }
+
+  val linter = new EnsoLint(
+    baseDirectory.value,
+    engineDistributionRoot.value,
+    streams.value.log
+  )
+  linter.check(whatToLint)
 }
 
 lazy val buildProjectManagerDistributionCond =
@@ -5839,7 +6006,7 @@ updateLibraryManifests := {
   val runtimeCp  = (`runtime` / Runtime / fullClasspath).value
   val fullCp     = (runnerCp ++ runtimeCp).distinct
   val modulePath = componentModulesPaths.value
-  val javaOpts = Seq(
+  val javaOpts = (ThisBuild / javaOptions).value ++ Seq(
     "--module-path",
     modulePath.map(_.getAbsolutePath).mkString(File.pathSeparator),
     "-m",
